--- a/package.json
+++ b/package.json
@@ -4,23 +4,28 @@
   "main": "index.js",
   "scripts": {
     "tweet": "node bot.js",
-    "test": "standard && node test.js",
+    "test": "standard",
     "publish": "npm run test"
   },
   "devDependencies": {
-    "tap": "^1.3.2",
     "standard": "4.5.4"
   },
   "dependencies": {
-    "twit": "^2.1.0"
+    "after": "^0.8.1",
+    "markov": "0.0.7",
+    "twit": "^2.1.0",
+    "yargs": "^3.21.0"
   },
   "license": "MIT",
-  "description": "twitter-fanfic-botnet ----------------",
+  "description": "re-live yr favorite tv-shows through a twitter botnet!",
   "keywords": [
     "twitter",
     "fan-fiction",
     "bot",
     "botnet"
   ],
-  "author": "Cole Willsea <coleww@gmail.com> (http://colewillsea.com/)"
+  "author": "Cole Willsea <coleww@gmail.com> (http://colewillsea.com/)",
+  "bin": {
+    "twitterFanficBotnet": "cmd.js"
+  }
 }
