--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "after": "^0.8.1",
-    "markov": "0.0.7",
+    "markov": "coleww/node-markov",
     "require-module": "^0.1.0",
     "twit": "^2.1.0",
     "wordfilter": "^0.2.1"
