--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "twitter-fanfic-botnet",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "index.js",
   "scripts": {
     "tweet": "node bot.js",
@@ -14,6 +14,7 @@
     "after": "^0.8.1",
     "markov": "coleww/node-markov",
     "require-module": "^0.1.0",
+    "this-is-probably-ok-to-say": "^1.0.1",
     "twit": "^2.1.0",
     "wordfilter": "^0.2.1"
   },
