--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "twitter-fanfic-botnet",
-  "version": "1.0.13",
+  "version": "1.0.14",
   "main": "index.js",
   "dependencies": {
     "add-ender": "^1.0.0",
@@ -11,8 +11,7 @@
     "quidprofollow": "^1.2.1",
     "require-module": "^0.1.0",
     "stopwords": "0.0.5",
-    "twit": "^2.1.0",
-    "wordfilter": "^0.2.1"
+    "twit": "^2.1.0"
   },
   "license": "MIT",
   "description": "re-live yr favorite tv-shows through a twitter botnet!",
