--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "twitter-fanfic-botnet",
-  "version": "1.0.16",
+  "version": "1.0.17",
   "main": "index.js",
   "dependencies": {
     "add-ender": "^1.0.0",
@@ -11,6 +11,7 @@
     "quidprofollow": "^1.2.1",
     "require-module": "^0.1.0",
     "stopwords": "0.0.5",
+    "this-is-probably-ok-to-say": "^1.0.3",
     "twit": "^2.1.0"
   },
   "license": "MIT",
